[package]
name = "larn"
version = "0.1.0"
edition = "2021"
authors = ["Rashik <rashikshahjahan@protonmail.com>"]
description = "Larn is a command-line tool designed to help software engineers improve their coding skills through AI-driven feedback. It analyzes code changes, identifies areas of improvement, and generates personalized programming exercises."
license ="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.38"
redis = "0.27.5"

